# ai-telegram-bot

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
bot/: __main__.py  main.py
bot/handlers/: __init__.py  draw.py  echo.py  subscription.py
bot/services/: ai_service.py  image_service.py  payment.py  storage.py
exam-bot/: .env.example  pyproject.toml  render.yaml  requirements.txt
exam-bot/bot/: main.py
exam-bot/bot/handlers/: __init__.py  shpora.py  start.py
exam-bot/bot/services/: ai_service.py  storage.py
solitaire/: index.html  prompts.md
