[project]
name = "echo-bot"
version = "0.1.0"
description = "Telegram echo bot on aiogram 3.27+"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.27,<4.0",
    "aiohttp>=3.13,<3.14",
    "aiohttp-socks>=0.11.0",
    "openai",
    "python-dotenv>=1.1",
    "requests>=2.34.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
