[project]
name = "exam-bot"
version = "0.1.0"
description = "Telegram бот для подготовки к ОГЭ/ЕГЭ — шпаргалки, AI-помощник"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.27",
    "aiohttp-socks>=0.11.0",
    "python-dotenv>=1.1",
    "requests>=2.32",
    "urllib3>=2.2",
]

[project.scripts]
bot = "bot.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
]
